<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="127dp"
        android:layout_marginEnd="33dp"
        android:backgroundTint="#dbdbdb"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="#3574fa"
        android:textColorHint="#dbdbdb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="33dp"
        android:backgroundTint="#dbdbdb"
        android:digits="0123456789."
        android:ems="10"
        android:hint="@string/price"
        android:textColor="#3574fa"
        android:textColorHint="#dbdbdb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <ImageView
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        app:layout_constraintEnd_toStartOf="@+id/add"
        app:layout_constraintTop_toTopOf="@+id/add"
        app:srcCompat="@drawable/ic_baseline_check_24"
        app:tint="@color/colorWhiteThree" />

    <TextView
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="112dp"
        android:drawablePadding="1dp"
        android:gravity="center_vertical"
        android:onClick="addItem"
        android:text="@string/add"
        android:textColor="@color/colorWhiteThree"
        android:textSize="20sp"
        app:drawableTint="#e3e3e3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price" />
</androidx.constraintlayout.widget.ConstraintLayout>