<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/txtBalanceFinance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balance_finance_title"
        android:textSize="14sp"
        android:fontFamily="sans-serif-light"
        android:textColor="@color/colorMediumGrey"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="37dp"
        android:layout_marginStart="19dp"/>

    <TextView
        android:id="@+id/txtBalanceFinanceValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/txtBalanceFinance"
        app:layout_constraintStart_toStartOf="@+id/txtBalanceFinance"
        android:textSize="48sp"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/colorPaleOrange" />

    <View
        android:id="@+id/dividerFinance"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivide"
        app:layout_constraintTop_toBottomOf="@+id/txtBalanceFinanceValue"
        android:layout_marginTop="38dp" />

    <LinearLayout
        android:id="@+id/llCosts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="26dp"
        android:paddingBottom="26dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintTop_toBottomOf="@+id/dividerFinance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/llIncomes" >

        <TextView
            android:id="@+id/txtBalanceCosts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/expense"
            android:textColor="@color/colorMediumGrey"
            android:textSize="10sp"
            android:fontFamily="sans-serif-light" />

        <TextView
            android:id="@+id/expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/colorExpense" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llIncomes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="26dp"
        android:paddingBottom="26dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        app:layout_constraintTop_toBottomOf="@id/dividerFinance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/llCosts" >

        <TextView
            android:id="@+id/txtBalanceIncome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income"
            android:textColor="@color/colorMediumGrey"
            android:textSize="10sp"
            android:fontFamily="sans-serif-light" />

        <TextView
            android:id="@+id/income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/colorAppleGreen" />

    </LinearLayout>

    <View
        android:id="@+id/dividerData"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorDivide"
        app:layout_constraintTop_toBottomOf="@+id/llIncomes" />

    <ru.borntonight.loftmoney.BalanceView
        android:id="@+id/balanceView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@+id/dividerData"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>